# blackbox

./: .gitignore  LICENSE  README.md  blackbox.py  blackbox_test.py  example.py  output.m  output.nb  pyproject.toml  setup.py  test.py  tox.ini
black_box/: __init__.py  blackbox.py
blackbox/: blackbox.py
blackboxfunctions/: __init__.py  blackbox.py
blackboxfunctions/tests/: test_logger.py  test_min_search.py  test_resfile.py  utils.py
